tests/fail/semantic/product_duplicate_field.cyt
atom Person(name: string)

enzyme DuplicateField[] -> Person(name: "a", name: "b")

// args: --no-colour

// expected stderr:
// error: duplicated field `name` on atom `Person`
//   ┌─ ../tests/fail/semantic/product_duplicate_field.cyt:3:46
//   │
// 3 │ enzyme DuplicateField[] -> Person(name: "a", name: "b")
//   │                                   ----       ^^^^ this is a duplicate field
//   │                                   │           
//   │                                   field already supplied here